--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,11 @@
 {
   "plugins": ["prettier-plugin-tailwindcss"],
-  "bracketSameLine": true
+  "bracketSameLine": true,
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "none",
+  "bracketSpacing": true
 }
